# prediction-market-platform

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose-prod.yaml  docker-compose.yaml
auth-service/: Cargo.toml
auth-service/src/: lib.rs  token_services.rs  types.rs
db-service/: Cargo.toml
db-service/.sqlx/: query-026c1e9ae0d63ab2a5077c04b3103274c321202383e90e94b3aa07670e2aeaf7.json  query-03e6ad429665b989e171bf7563abf9ab2f362a673e4b3d780643a215f8857f80.json  query-04733718c18c8e4aae3388905770e8a0462d8a49d41789445b7d03ffcbcd9519.json  query-09869fdf67672ae015c821bfa589cd54693f243020bc9af604163aa75957525c.json  query-10c169c01176ed93e662dbb89d69ebdd1f791a40ee4f3939f9f49c822926714e.json  query-213de6d4e8fff386bd5bddc011ac1f8b6bdaa76598e4c03af9835f88a7bb321e.json  query-2ca45a196eb94bbce98ed447d7cba1e8ee13675dc2d01dce5dab4e8947e80f4b.json  query-3602c5e6b25a8c1d0914642b945cf8b08ce2f83d31c6c0a947a39147e5c50d36.json  query-3673e672daeb6b4656b07cbe50b07208faa9e1f650f87cd7cb36942ab17a503d.json  query-3e7ae91019299fd72310b34477a8ecedc42ea47077358f0fc31b0f93aa7c2906.json  query-4273913c0f269d84e0d88c2603037ab2f588ce0ae86179f04ad79f5b3ceb5cf0.json  query-5011f4a665cb8905c1daf331fbbf874cc23a88b2f52c82274fb55235df58bdc8.json  query-5365aa3ee060f6caf932e69430c86ceddbb9f1b1bc1391c06e27b91da49e9b97.json  query-58224c9555ed86c399af1de18c19e99219c3fb2c7cfe844a53bbf4735d4faee8.json  query-59b16853de774eee5dba858741ac45918d8bae470792df2df0f002a57dddde85.json  query-5a335cab97fd574fe18bb73790b8bb5f2091473dd44b2e23ee217df2085b53fb.json  query-5a372c0ef0a883871f2a7ca442e1e36fb41d1c2ab914f1bf176e6d7f0664b0cc.json  query-5d892ff79a70ad34e95ff794f5c93775553c662d64a7e77eed8ce63c1befa54f.json  query-5ee1bf43a082d73afeb8a446949e1c42bdb10384f50297e58d9e47232b8d07af.json  query-5f7227f70064ef0c063c205e5576e689eb3580aaa4158a08e72ce26576170732.json  query-62026d044ee2729410426bbb590db6214c8cbf4880d03cf37ac0c82800bffd54.json  query-6a3532430782df1151628ba3890c2de75ec3bf347e71ee9318bfbffabea8a7a3.json  query-6c510ce362a94a26509ccf928149890e8be66b96a448cb201422863060989aea.json  query-6fc630f27d3d3742e29ece78f3b79549a1b9349c3c5be3829535dbad60d6efd2.json  query-7203474d8b51beb1b57f60f693b2d58b3869cb1a3851ff50d80b020da751f045.json  query-745a2afe244a16070631760b88ea4a159cac489f3c58c8f2e3766805aeceaaea.json  query-75915bedb837dd0e4064334a7587117cdcfc5b446b1a9914b1ba6b644949c5c1.json  query-75fc1292b10687db9d31d1ae2f8298900a1df3732693d8454d274fbfee47a167.json  query-791e3d582adf442849a3c8fb79c087560d04c1723a30943a40c360bf4e03491a.json  query-7929dc94bbc48788fd63faea4e7bd0c30af5d27299cd7e233122d965a135b8e6.json  query-79a4a9089b2d5a970fc17992045ccd567b813c5cef731c981a279bbeb4f8682d.json  query-7fe1cc922d607079adede58de4d4a9a08ee0b9cb04d5c525c5bc870935e65024.json  query-83f4f175c42f942f7516714742768b50b2a03ef5d919edb4fce3b2df7bde0f71.json  query-87509857401e65de9da78f71b98113f91b612df227665c2c739a00b1b729c889.json  query-909b9aa33427c5be572e5c0d6359b147a743decad143aa275d470b8204195fc6.json  query-90d29bab84a5b59c50aad52bdc43c81be05a816f93471ee0b17db5e40153c773.json  query-91215a121a4204abefaeea09948ff2acc41472775717b70adac676af0e2c8c4b.json  query-915ddbabff23c487b42bd0de7ae464b11f7222653593f9b0dabdc5d63d3d58e6.json  query-94fad0ce463675da937024e1b48f601737a15c948ea331eec674855508ff3d0e.json  query-97971b2075695fbf5e058a39f7a672ab64e28ff0d6a8d231fc7e808c35f65405.json  (+22 more)
db-service/migrations/: 20250510140151_creating_database_schema.sql  20250510140203_added_all_other_required_tables.sql  20250511185915_adding_updated_at_triggers.sql  20250604182551_create_update_order_filled_quantity_and_add_user_trades_procedure.sql  20250712084500_market_expiry_status_update_cron.sql
db-service/src/: lib.rs  pagination.rs
db-service/src/procedures/: mod.rs
db-service/src/schema/: market.rs  mod.rs  orders.rs  user_holdings.rs  user_trades.rs  user_transactions.rs  users.rs
db-service/src/schema/enums/: mod.rs
db-service/src/utils/: mod.rs
grpc-service/: Cargo.toml  build.rs
grpc-service/src/: lib.rs  main.rs  state.rs
grpc-service/src/procedures/: market_services.rs  mod.rs  price_services.rs
grpc-service/src/utils/: clickhouse_schema.rs  macros.rs  mod.rs  timeframe.rs
order-service/: Cargo.toml
order-service/src/: main.rs  state.rs
order-service/src/handlers/: mod.rs
order-service/src/handlers/nats_handler/: add_order_handler.rs  cancel_order_handler.rs  create_order_handler.rs  mod.rs  update_order_handler.rs
order-service/src/handlers/ws_handler/: handle_text_messages.rs  mod.rs
order-service/src/order_book/: global_book.rs  market_book.rs  mod.rs  outcome_book.rs
order-service/src/utils/: mod.rs  update_matched_orders.rs  update_services.rs
service-api/: Cargo.toml
service-api/src/: bloom_f.rs  main.rs  state.rs
service-api/src/routes/: login.rs  mod.rs
service-api/src/routes/admin/: mod.rs
service-api/src/routes/admin/markets/: create_market.rs  finalize_market.rs  initialize_market.rs  mod.rs
service-api/src/routes/user/: holdings.rs  metadata.rs  mod.rs  profile.rs
service-api/src/routes/user/orders/: cancel_order.rs  create_limit_order.rs  create_market_order.rs  get_all_users_orders.rs  get_orders_by_markets.rs  mod.rs  update_order.rs
service-api/src/routes/user/trades/: get_user_trades.rs  mod.rs
service-api/src/utils/: macros.rs  middleware.rs  mod.rs  types.rs
utility-helpers/: Cargo.toml
utility-helpers/src/: kafka_topics.rs  lib.rs  macros.rs  message_pack_helper.rs  symmetric.rs  types.rs
utility-helpers/src/nats_helper/: mod.rs  types.rs
utility-helpers/src/redis/: keys.rs  mod.rs
utility-helpers/src/ws/: mod.rs  publisher_types.rs  types.rs
websocket-service/: Cargo.toml
websocket-service/src/: main.rs  state.rs
websocket-service/src/core/: client_manager.rs  handle_connection.rs  mod.rs
websocket-service/src/core/message_handlers/: handle_binary_message.rs  handle_text_message.rs  mod.rs
websocket-service/src/core/message_handlers/channel_handlers/: mod.rs  (+1 more)
websocket-service/src/nats_handler/: handle_market_book_update.rs  mod.rs
(+79 files in other folders)
