workspace.resolver = "2"

workspace.members = [
    "auth-service",
    "db-service",
    "grpc-service",
    "order-service",
    "proto-defs",
    "service-api",
    "utility-helpers",
    "websocket-service",
]

[workspace.dependencies]
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v5", "v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
rust_decimal = { version = "1.37.1", features = ["serde"] }
rust_decimal_macros = "1.37.1"
solana-sdk = "2.2.2"
dotenv = "0.15.0"
base64 = "0.22.1"
deadpool-redis = { version = "0.20.0", features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "rt_tokio_1",
] }
redis = { version = "0.28.1", features = ["tokio-comp", "tokio-rustls-comp"] }
tower-http = { version = "0.6.4", features = ["cors"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
    "chrono",
    "uuid",
    "rust_decimal",
    "macros",
] }
reqwest = { version = "0.12.15", features = ["json"] }
jsonwebtoken = "9.3.1"
prost = "0.13.5"
prost-types = "0.13.5"
async-nats = { version = "0.40.0" }
futures-util = "0.3.31"
futures = "0.3.31"
bloom = "0.3.2"
parking_lot = { version = "0.12.3" }
rmp-serde = "1.3.0"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
