[package]
name = "db-service"
version = "0.1.0"
edition = "2024"

[dependencies]
utility-helpers = { path = "../utility-helpers" }
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
solana-sdk = { workspace = true }
base64 = { workspace = true }
dotenv = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
