[package]
name = "service-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.0", features = ["protobuf"] }
rand = "0.9.1"
db-service = { path = "../db-service" }
auth-service = { path = "../auth-service" }
utility-helpers = { path = "../utility-helpers" }
proto-defs = { path = "../proto-defs" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
async-nats = { workspace = true }
bloom = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
