[package]
name = "utility-helpers"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
jsonwebtoken = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
deadpool-redis = { workspace = true }
tracing = { workspace = true }
rmp-serde = { workspace = true }


proto-defs = { path = "../proto-defs" }
