[package]
name = "websocket-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
dotenv = { workspace = true }
async-nats = { workspace = true }
futures-util = { workspace = true }
tower = "0.5.2"
tokio-tungstenite = "0.26.2"
axum = { version = "0.8.4", features = ["ws"] }

utility-helpers = { path = "../utility-helpers" }
proto-defs = { path = "../proto-defs" }
